Fix spacings

--- a/component-library/components/generic/left-right-block/left-right-block.scss
+++ b/component-library/components/generic/left-right-block/left-right-block.scss
@@ -6,7 +6,7 @@
   padding-bottom: 0;
 
   .c-heading {
-    margin-bottom: 0.5rem;
+    margin-bottom: 1.5rem;
   }
 
   &__content {
@@ -32,6 +32,7 @@
 
   & .c-social-icons {
     justify-content: flex-start;
+    margin-bottom: 1rem;
   }
 
   &__icons {
@@ -39,7 +40,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     flex-wrap: wrap;
-    gap: 2.18rem;
+    gap: 1.5rem;
     margin-bottom: 1.5rem;
   }
 
